# cmake_example

./: CMakeLists.txt  main.cpp
